2008-08-20  Sven Neumann  <sven@gimp.org>

	* plug-ins/file-sgi/sgi.c
	* plug-ins/file-sgi/sgi-lib.[ch]: pass error messages with the
	return values instead of calling g_message().

2008-08-20  Michael Natterer  <mitch@gimp.org>

	* app/paint/gimpperspectiveclone.[ch]: make
	gimp_perspective_clone_get_matrix() static, add
	gimp_perspective_clone_set_transform().

	* app/tools/gimpperspectiveclonetool.c
	(gimp_perspective_clone_tool_mode_notify): use above set_transform()
	API instead of poking into the object.

	(gimp_perspective_clone_tool_constructor): call
	gimp_perspective_clone_tool_mode_notify() to set up things instead
	of duplicating code.

2008-08-20  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimpperspectiveclonetool.[ch]: formatting.

2008-08-20  Sven Neumann  <sven@gimp.org>

	* plug-ins/file-psd/psd.c
	* plug-ins/file-psd/psd-load.[ch]
	* plug-ins/file-psd/psd-save.c 
	* plug-ins/file-psd/psd-thumb-load.[ch]: pass error messages with
	the return values instead of calling g_message().

2008-08-20  Sven Neumann  <sven@gimp.org>

	* plug-ins/file-jpeg/jpeg.[ch]
	* plug-ins/file-jpeg/jpeg-load.[ch]
	* plug-ins/file-jpeg/jpeg-save.[ch]: pass error messages with the
	return values instead of calling g_message().

2008-08-20  Sven Neumann  <sven@gimp.org>

	* app/file/file-save.c (file_save): flush the image when done to
	cause the actions to be updated (in particular File->Revert).

2008-08-20  Sven Neumann  <sven@gimp.org>

	* plug-ins/file-ico/ico-save.c: create GHashTable with destroy
	notifiers.

2008-08-20  Sven Neumann  <sven@gimp.org>

	* plug-ins/file-faxg3/faxg3.c
	* plug-ins/file-ico/ico.c
	* plug-ins/file-ico/ico-load.[ch]
	* plug-ins/file-ico/ico-save.[ch]: pass error messages with the
	return values instead of calling g_message().

2008-08-19  Sven Neumann  <sven@gimp.org>

	* app/core/gimpimage-guides.c (gimp_image_find_guide): find guides
	outside the image as well. This complements the change that we