@@ -1,5 +1,10 @@
 2008-08-20  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/file-xjt/xjt.c: pass error messages with the return
+	values instead of calling g_message().
+
+2008-08-20  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/file-sgi/sgi.c
 	* plug-ins/file-sgi/sgi-lib.[ch]: pass error messages with the
 	return values instead of calling g_message().
